--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.2.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "axios": "^1.0.0",
+    "@octokit/rest": "^19.0.0"
+
   }
 }
